<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".FirstStartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/first_start_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/first_start_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/onBackground"
        android:textSize="32sp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/first_start_welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/first_start_welcome"
        android:textColor="@color/onPrimary"
        android:textSize="36sp"
        android:padding="8sp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/first_start_select_gas_type_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_start_select_gas_type"
        android:textColor="@color/onBackground"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/first_start_gas_type_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_start_welcome_text" />

    <Spinner
        android:id="@+id/first_start_gas_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/gas_types"
        app:layout_constraintBottom_toBottomOf="@+id/first_start_select_gas_type_text"
        app:layout_constraintStart_toEndOf="@+id/first_start_select_gas_type_text"
        app:layout_constraintTop_toTopOf="@+id/first_start_select_gas_type_text"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/first_start_start_button"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondary"
        android:text="@string/first_start_start"
        android:textColor="@color/onSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_start_select_gas_type_text" />


</android.support.constraint.ConstraintLayout>